--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "start": "node src/index.js",
     "stage-after-lint": "git add src",
-    "lint": "standard --fix"
+    "lint": "standard --fix",
+    "unit": "mocha test/**/*.spec.js --require babel-core/register",
+    "unit:watch": "npm run unit -- --watch --watch-extensions js"
   },
   "pre-commit": [
     "lint",
+    "unit",
     "stage-after-lint"
   ],
   "repository": {
@@ -23,6 +26,10 @@
   },
   "homepage": "https://github.com/meszaros-lajos-gyorgy/primes#readme",
   "devDependencies": {
+    "assert": "^1.4.1",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "mocha": "^5.0.4",
     "pre-commit": "^1.2.2",
     "standard": "^11.0.1"
   }
