--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "stage-after-lint": "git add src",
     "lint": "standard --fix",
     "unit": "mocha test/**/*.spec.js --require babel-core/register",
-    "unit:watch": "npm run unit -- --watch --watch-extensions js"
+    "unit:watch": "npm run unit -- --watch --watch-extensions js",
+    "example": "babel-node -- ./example/index.js"
   },
   "pre-commit": [
     "lint",
@@ -27,6 +28,7 @@
   "homepage": "https://github.com/meszaros-lajos-gyorgy/primes#readme",
   "devDependencies": {
     "assert": "^1.4.1",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "mocha": "^5.0.4",
