--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "mocha": "^5.0.4",
     "pre-commit": "^1.2.2",
     "standard": "^11.0.1"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "ws": "^5.1.0"
   }
 }
